# social-hack

./: .gitignore  README.md  pyproject.toml
ali-code/: QualificationAdjustment.html  contact.html  package-lock.json  package.json  server.js
backend/: config.py  llm.py  logger.py  main.py  models.py  storage.py
frontend/: package-lock.json  package.json  webpack.config.js
frontend-lorenzo/: package-lock.json  package.json
frontend-lorenzo/src/: App.jsx
frontend/Transcriptor/: Transcriptor.tsx
frontend/src/: App.js  App.jsx  SimilarDocumentsFinder.jsx  Transcriptor.jsx  index.tsx  supabaseClient.jsx  supabaseClient.ts
frontend/src/components/QualitificationCriteria/: QualificationCriteria.tsx
frontend/src/components/SidebarNav/: SidebarNav.tsx
frontend/src/components/Transcriptor/: Transcriptor.tsx
frontend/src/components/catalyst/: alert.tsx  listbox.tsx
frontend/src/models/: documents.ts
frontend/src/pages/Checklist/: Checklist.tsx
frontend/src/pages/ClientDetails/: ClientDetails.tsx
frontend/src/pages/ClientManagement/: ClientManagement.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/LegalDraft/: LegalDraft.tsx
notebooks/: test.ipynb
